<resources>
    <string name="app_name">ClinicManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forogt_password">Forogt Password?</string>
    <string name="login">Login</string>
    <string name="new_to_digits">New to DIGITS?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="more">More</string>
    <string name="date">Date</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="search">Search</string>
    <string name="scan_your">Scan Your</string>
    <string name="medical_smart_card">Medical Smart Card</string>
    <string name="specialist_doctor">Specialist Doctor</string>
    <string name="view_all">View All</string>
    <string name="filter">Filter</string>
    <string name="educational_information">Educational Information</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="my_appointment">My Appointment</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="drug_registration_number">drug registration number :</string>
    <string name="strength_amp_unit_strength"><![CDATA[strength & Unit strength :]]></string>
    <string name="pharmaceutical_form">pharmaceutical form :</string>
    <string name="ask_a_doctor">Ask a doctor</string>
    <string name="doctor_result">Doctor result</string>
    <string name="lab_result">Lab result</string>
    <string name="radiology_result">Radiology result</string>
    <string name="logout">Logout</string>
    <string name="active">Active</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_confirmed">Appointment Confirmed</string>
    <string name="appointment_cancelled">Appointment Cancelled</string>
    <string name="appointment_completed">Appointment Completed</string>
    <string name="doctor_detail">Doctor Detail</string>
    <string name="doctor_listing">Doctor Listing</string>
    <string name="medicine">Medicine</string>
    <string name="medicine_detail">Medicine Detail</string>
    <string name="profile">Profile</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="doctor">Doctor</string>
    <string name="lab">Lab</string>
    <string name="radiology">Radiology</string>
    <string name="result">Result</string>
    <string name="digits_clinic_system">DIGITS Clinic system</string>
    <string name="dashboard">Dashbaord</string>
    <string name="choose_your_slot">Choose your slot</string>
    <string name="please_choose_your_slot_as_per_your_convenience">Please choose your slot as per your convenience</string>
    <string name="category_listing">Category Listing</string>
    <string name="specialities">Specialities</string>
    <string name="top_doctors_in_your_city">Top Doctors in your City</string>
    <string name="recent_reviews">Recent Reviews</string>
    <string name="showing_result_for">Showing result for</string>
    <string name="faq">FAQ</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_result">My Result</string>
    <string name="time">Time</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="diagonstics_from_doctor">Diagonstics From Doctor</string>
    <string name="suggested_lab_from_doctor">Suggested Lab From Doctor</string>
    <string name="suggested_radiology_from_doctor">Suggested Radiology From Doctor</string>
    <string name="medicine_time">Medicine Time</string>
    <string name="medicine_frequency">Medicine Frequency</string>
    <string name="medicine_from_doctor">Medicine From Doctor</string>
    <string name="upload_file">Upload File</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_from_doctor">Description From Doctor</string>
    <string name="notes">Notes</string>
    <string name="rate_doctor">Rate Doctor</string>
    <string name="please_rate_the_doctor">Please rate the doctor</string>
    <string name="submit">Submit</string>
    <string name="queue_details">Queue Details</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear">Clear Filter</string>
    <string name="choose_evening_time">Choose Evening Time</string>
    <string name="choose_afternoon_time">Choose Afternoon Time</string>
    <string name="choose_morning_time">Choose Morning Time</string>
</resources>