<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:cardBackgroundColor="@color/primary_color"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/group_3414"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/group_3415"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.3" />

                    <TextView
                        android:id="@+id/txtUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/medicine_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/nav_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/group_3425"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/home"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_my_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/group_3426"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/my_appointment"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_ask_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/group_3427"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/ask_a_doctor"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_doctor_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/group_3428"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/doctor_result"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_lab_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/group_3429"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/lab_result"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_radiology_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/group_3430"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/radiology_result"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/nav_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:drawableStart="@drawable/group_3431"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>