<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@android:color/transparent"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bkg1"
            android:backgroundTint="@color/primary_color"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rate_doctor"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:src="@drawable/group_3357" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/border"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/title"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/rate_doctor"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/please_rate_the_doctor"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_12ssp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:focusable="false"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:saveEnabled="true"
            app:layout_constraintLeft_toRightOf="@+id/img"
            app:layout_constraintTop_toBottomOf="@+id/txtSpecialist1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_75sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:hint="@string/description"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="@dimen/_70sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textSize="@dimen/_10sdp"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>